--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
